--- a/package.json
+++ b/package.json
@@ -8,8 +8,29 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/vue-fontawesome": "^0.1.10",
+    "@molgenis/molgenis-api-client": "^3.1.3",
+    "@molgenis/molgenis-i18n-js": "^0.2.1",
+    "@molgenis/molgenis-ui-context": "1.6.4",
+    "@molgenis/rsql": "^0.2.5",
+    "axios": "0.19.2",
+    "bootstrap-vue": "2.0.0-rc.11",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "jquery": "3.4.1",
+    "lodash": "^4.17.15",
+    "lz-string": "1.4.4",
+    "popper.js": "1.15.0",
+    "v-runtime-template": "1.10.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.3.4",
+    "vue-slider-component": "^3.1.5",
+    "vue2-daterange-picker": "^0.5.1",
+    "vuedraggable": "^2.23.2",
+    "vuex": "^3.4.0",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
