--- a/molgenis/package.json
+++ b/molgenis/package.json
@@ -1,6 +1,5 @@
 {
   "name": "@molgenis/molgenis",
-  "workspaces": ["molgenis", "theme/default"],
   "version": "0.1.0",
   "type": "module",
   "dependencies": {
@@ -11,8 +10,10 @@
     "@molgenis/molgenis-api-client": "^3.1.3",
     "@molgenis/molgenis-i18n-js": "^0.2.1",
     "@molgenis/molgenis-ui-context": "1.6.4",
+    "@molgenis/molgenis-ui-form": "^4.0.3",
     "@molgenis/rsql": "^0.2.5",
     "axios": "0.19.2",
+    "bootstrap-scss": "^4.5.0",
     "bootstrap-vue": "2.0.0-rc.11",
     "core-js": "^3.6.5",
     "jquery": "3.4.1",
@@ -26,11 +27,13 @@
     "vue2-daterange-picker": "^0.5.1",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.4.0",
+    "vuex-i18n": "^1.13.1",
     "vuex-router-sync": "^5.0.0"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "devDependencies": {}
 }
