--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint:js": "eslint \"{molgenis}/**/{*.js,*.vue}\"",
     "lint:scss": "stylelint 'molgenis/**/*.scss'",
     "prepare": "yarn icons;snowpack --dest build/lib",
-    "release": "standard-version"
+    "release": "standard-version",
+    "snowpack": "snowpack --dest build/lib"
   },
   "husky": {
     "hooks": {
