chore: metadata + snowpack 2

--- a/snowpack.config.json
+++ b/snowpack.config.json
@@ -1,6 +1,6 @@
 {
-  "mount": {
-    "molgenis": "/build",
-    "public": "/build"
-  }
+    "installOptions": {
+        "dest": "build/lib"
+    },
+    "mount": {"molgenis": "/"}
 }
