--- a/molgenis/package.json
+++ b/molgenis/package.json
@@ -26,6 +26,7 @@
     "vue-code": "^1.2.3",
     "vue-flatpickr-component": "^8.1.5",
     "vue-form": "^4.10.3",
+    "vue-multiselect": "^2.1.6",
     "vue-router": "^3.3.4",
     "vue-select": "^3.10.8",
     "vue-slider-component": "^3.2.4",
