--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@molgenis/frontend",
-  "workspaces": ["molgenis", "theme/default"],
+  "workspaces": [
+    "molgenis",
+    "theme/default"
+  ],
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -16,7 +19,7 @@
     "lint:scss": "stylelint 'molgenis/**/*.scss'",
     "prepare": "yarn icons;snowpack --dest build/lib",
     "release": "standard-version",
-    "snowpack": "snowpack --dest build/lib"
+    "snowpack": "snowpack"
   },
   "husky": {
     "hooks": {
@@ -36,7 +39,11 @@
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "@rollup/plugin-replace": "^2.3.2",
+    "@vue/cli-plugin-babel": "~4.4.0",
+    "@vue/cli-plugin-eslint": "~4.4.0",
+    "@vue/cli-service": "~4.4.0",
     "archy": "^1.0.0",
+    "babel-eslint": "^10.1.0",
     "chalk": "^3.0.0",
     "chokidar": "^3.3.1",
     "clean-css": "^4.2.3",
@@ -60,9 +67,10 @@
     "puppeteer": "2.x.x",
     "rc": "^1.2.8",
     "rollup": "^1.31.1",
+    "rollup-plugin-postcss": "^3.1.5",
     "rollup-plugin-terser": "^5.2.0",
     "serve-static": "^1.14.1",
-    "snowpack": "^1.7.1",
+    "snowpack": "2.x.x",
     "standard-version": "7.x.x",
     "stylelint": "13.x.x",
     "stylelint-order": "4.x.x",
@@ -73,12 +81,8 @@
     "tildify": "^2.0.0",
     "tiny-lr": "^1.1.1",
     "vue-svgicon": "^3.2.6",
-    "yargs": "^15.3.1",
-    "@vue/cli-plugin-babel": "~4.4.0",
-    "@vue/cli-plugin-eslint": "~4.4.0",
-    "@vue/cli-service": "~4.4.0",
-    "babel-eslint": "^10.1.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "yargs": "^15.3.1"
   },
   "eslintConfig": {
     "root": true,
