--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint": "yarn lint:js;yarn lint:scss",
     "lint:js": "eslint \"{molgenis}/**/{*.js,*.vue}\"",
     "lint:scss": "stylelint 'molgenis/**/*.scss'",
-    "prepare": "yarn icons;snowpack --dest build/lib",
+    "prepare": "yarn icons;yarn snowpack",
     "release": "standard-version",
     "snowpack": "snowpack"
   },
@@ -35,7 +35,7 @@
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "7.x.x",
     "@garage11/vue-eslint-parser": "^8.0.0",
-    "@garage11/vuepack": "2.x.x",
+    "@garage11/vuepack": "^1.0.1",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "@rollup/plugin-replace": "^2.3.2",
