--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,6 +1,7 @@
+COMPOSE_PROJECT_NAME=mg
 # MacOS: host.docker.internal
 # Windows: docker.for.win
 # Linux: 172.17.0.1 (bridge) or 127.0.0.1 (host)
-MOLGENIS_HOST=host.docker.internal
+MOLGENIS_HOST=127.0.0.1
 # Window & MacOS: bridge, Linux: host
-NETWORK_MODE=bridge
+NETWORK_MODE=host
