--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -45,7 +45,7 @@ services:
     network_mode: ${NETWORK_MODE:-bridge}
     volumes:
       - ./init_db.sql:/docker-entrypoint-initdb.d/init.sql
-      - db-data:/var/lib/postgresql/data
+      - postgres:/var/lib/postgresql/data
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:5.5.3
@@ -63,7 +63,7 @@ services:
         soft: -1
         hard: -1
     volumes:
-      - es-data:/usr/share/elasticsearch/data
+      - elasticsearch:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
       - 9300:9300
@@ -73,7 +73,7 @@ services:
     image: minio/minio:RELEASE.2019-03-20T22-38-47Z
     container_name: minio
     volumes:
-      - ~/.molgenis/minio/:/data
+      - minio:/data
     ports:
       - 9000:9000
     network_mode: ${NETWORK_MODE:-bridge}
@@ -94,5 +94,6 @@ services:
       - ./opencpu/ports.conf:/etc/apache2/ports.conf
 
 volumes:
-  db-data:
-  es-data:
+  elasticsearch:
+  minio:
+  postgres:
