fix: docker bridge mode config and docs

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -4,4 +4,4 @@ COMPOSE_PROJECT_NAME=mg
 # Linux: 172.17.0.1 (bridge) or 127.0.0.1 (host)
 MOLGENIS_HOST=127.0.0.1
 # Window & MacOS: bridge, Linux: host
-NETWORK_MODE=host
+NETWORK_MODE=bridge
