--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,26 +1,32 @@
-version: "3.7"
 services:
+
   nginx:
-    image: nginx
+    container_name: nginx
     environment:
       MOLGENIS_HOST: ${MOLGENIS_HOST:-localhost}
-    container_name: nginx
+    image: nginx
+    links:
+      - "molgenis:molgenis"
+    network_mode: ${NETWORK_MODE:-bridge}
     ports:
       - 80:80
-    network_mode: ${NETWORK_MODE:-bridge}
     volumes:
       - ./nginx/sites-enabled:/etc/nginx/sites-enabled
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ../build:/usr/share/nginx/html
+
   molgenis:
-    image: registry.molgenis.org/molgenis/molgenis-app:dev
     container_name: molgenis
-    network_mode: ${NETWORK_MODE:-bridge}
+    depends_on:
+      - postgresql
+      - elasticsearch
+      - minio
+      - opencpu
     environment:
       - molgenis.home=/home/molgenis
       - opencpu.uri.host=opencpu
       - elasticsearch.transport.addresses=elasticsearch:9300
-      - db_uri=jdbc:postgresql://postgres/molgenis
+      - db_uri=jdbc:postgresql://postgresql/molgenis
       - db_user=molgenis
       - db_password=molgenis
       - admin.password=admin
@@ -29,26 +35,30 @@ services:
       - MINIO_ACCESS_KEY=molgenis
       - MINIO_SECRET_KEY=molgenis
       - "CATALINA_OPTS=-Xmx1g -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled"
-    depends_on:
-      - postgres
-      - elasticsearch
-      - minio
-      - opencpu
-  postgres:
-    image: postgres:11-alpine
-    container_name: postgres
+    image: registry.molgenis.org/molgenis/molgenis-app:dev
+    links:
+      - "elasticsearch:elasticsearch"
+      - "minio:minio"
+      - "opencpu:opencu"
+      - "postgresql:postgresql"
+    network_mode: ${NETWORK_MODE:-bridge}
+    ports:
+      - 8080:8080
+
+  postgresql:
+    container_name: postgresql
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
+    image: postgres:11-alpine
     ports:
       - 5432:5432
     network_mode: ${NETWORK_MODE:-bridge}
     volumes:
       - ./init_db.sql:/docker-entrypoint-initdb.d/init.sql
-      - postgres:/var/lib/postgresql/data
+      - postgresql:/var/lib/postgresql/data
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:5.5.3
     container_name: elasticsearch
     environment:
       - cluster.name=molgenis
@@ -58,42 +68,44 @@ services:
       - xpack.monitoring.enabled=false
       - xpack.watcher.enabled=false
       - discovery.type=single-node
+    image: docker.elastic.co/elasticsearch/elasticsearch:5.5.3
+    network_mode: ${NETWORK_MODE:-bridge}
+    ports:
+      - 9200:9200
+      - 9300:9300
     ulimits:
       memlock:
         soft: -1
         hard: -1
     volumes:
       - elasticsearch:/usr/share/elasticsearch/data
-    ports:
-      - 9200:9200
-      - 9300:9300
-    network_mode: ${NETWORK_MODE:-bridge}
 
   minio:
-    image: minio/minio:RELEASE.2019-03-20T22-38-47Z
+    command: server /data
     container_name: minio
-    volumes:
-      - minio:/data
-    ports:
-      - 9000:9000
-    network_mode: ${NETWORK_MODE:-bridge}
     environment:
       MINIO_ACCESS_KEY: molgenis
       MINIO_SECRET_KEY: molgenis
-    command: server /data
+    image: minio/minio:RELEASE.2019-03-20T22-38-47Z
+    network_mode: ${NETWORK_MODE:-bridge}
+    ports:
+      - 9000:9000
+    volumes:
+      - minio:/data
 
   opencpu:
-    image: molgenis/opencpu:opencpu-release-2019-03-20_12-07-11
     container_name: opencpu
+    image: molgenis/opencpu:opencpu-release-2019-03-20_12-07-11
+    network_mode: ${NETWORK_MODE:-bridge}
     ports:
       - 8004:8004
       - 8787:8787
-    network_mode: ${NETWORK_MODE:-bridge}
     volumes:
       - ./opencpu/000-default.conf:/etc/apache2/sites-enabled/000-default.conf
       - ./opencpu/ports.conf:/etc/apache2/ports.conf
 
+version: "3.8"
 volumes:
   elasticsearch:
   minio:
-  postgres:
+  postgresql:
