--- a/molgenis/package.json
+++ b/molgenis/package.json
@@ -7,7 +7,6 @@
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.10",
-    "@molgenis/molgenis-api-client": "^3.1.3",
     "@molgenis/rsql": "^0.2.5",
     "axios": "0.19.2",
     "bootstrap-scss": "^4.5.0",
@@ -16,6 +15,7 @@
     "core-js": "^3.6.5",
     "debounce": "^1.2.0",
     "flatpickr": "^4.6.6",
+    "form-data": "^3.0.0",
     "jquery": "3.4.1",
     "lodash": "^4.17.15",
     "lz-string": "1.4.4",
