--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
   },
   "scripts": {
     "build": "./cli.js build",
-    "icons": "vsvg -s theme/svg/ --es6 -t theme/icons",
     "lint": "yarn lint:js;yarn lint:scss",
     "lint:js": "eslint \"{molgenis}/**/{*.js,*.vue}\"",
     "lint:scss": "stylelint 'molgenis/**/*.scss'",
-    "prepare": "yarn icons;yarn snowpack",
+    "prepare": "yarn snowpack",
     "release": "standard-version",
     "snowpack": "snowpack"
   },
@@ -32,55 +31,39 @@
     "**/*.scss": "stylelint"
   },
   "devDependencies": {
-    "@commitlint/cli": "8.3.5",
-    "@commitlint/config-conventional": "7.x.x",
     "@garage11/vue-eslint-parser": "^8.0.0",
     "@garage11/vuepack": "^1.0.1",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "@rollup/plugin-replace": "^2.3.2",
-    "@vue/cli-plugin-babel": "~4.4.0",
-    "@vue/cli-plugin-eslint": "~4.4.0",
-    "@vue/cli-service": "~4.4.0",
     "archy": "^1.0.0",
     "babel-eslint": "^10.1.0",
     "chalk": "^3.0.0",
     "chokidar": "^3.3.1",
     "clean-css": "^4.2.3",
     "connect": "^3.7.0",
-    "connect-mount": "^1.0.0",
-    "cz-conventional-changelog": "^2.1.0",
     "del": "2.x.x",
     "eslint": "7.x.x",
     "eslint-plugin-sort-class-members": "1.x.x",
-    "eslint-plugin-vue": "^6.2.1",
     "fs-extra": "^8.1.0",
     "globby": "^11.0.0",
     "husky": "3.x.x",
     "imagemin": "^7.0.1",
     "imagemin-jpegtran": "^6.0.0",
     "imagemin-pngquant": "^8.0.0",
-    "lint-staged": "9.x.x",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
     "node-sass-glob-importer": "^5.3.2",
-    "puppeteer": "2.x.x",
     "rc": "^1.2.8",
     "rollup": "^1.31.1",
     "rollup-plugin-postcss": "^3.1.5",
     "rollup-plugin-terser": "^5.2.0",
-    "serve-static": "^1.14.1",
     "snowpack": "2.x.x",
-    "standard-version": "7.x.x",
     "stylelint": "13.x.x",
     "stylelint-order": "4.x.x",
     "stylelint-scss": "3.x.x",
-    "tap-spec": "5.x.x",
-    "tape": "4.x.x",
-    "tape-catch": "1.x.x",
     "tildify": "^2.0.0",
     "tiny-lr": "^1.1.1",
-    "vue-svgicon": "^3.2.6",
     "vue-template-compiler": "^2.6.11",
     "yargs": "^15.3.1"
   },
@@ -102,5 +85,8 @@
     "commitizen": {
       "path": "./node_modules/cz-customizable"
     }
+  },
+  "dependencies": {
+    "rollup-plugin-root-import": "^1.0.0"
   }
 }
