--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "@garage11/vue-eslint-parser": "^8.0.0",
-    "@garage11/vuepack": "^1.0.1",
+    "@garage11/vuepack": "1.2.0",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "@rollup/plugin-replace": "^2.3.2",
@@ -51,6 +51,7 @@
     "imagemin": "^7.0.1",
     "imagemin-jpegtran": "^6.0.0",
     "imagemin-pngquant": "^8.0.0",
+    "lint-staged": "^10.2.11",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
     "node-sass-glob-importer": "^5.3.2",
