feat: host/bridge docker config

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,7 +1,4 @@
+# Linux may use docker-compose.host.yml
+# MacOS must use docker-compose.bridge.yml
+COMPOSE_FILE=docker-compose.yml:docker-compose.host.yml
 COMPOSE_PROJECT_NAME=mg
-# MacOS: host.docker.internal
-# Windows: docker.for.win
-# Linux: 172.17.0.1 (bridge) or 127.0.0.1 (host)
-MOLGENIS_HOST=127.0.0.1
-# Window & MacOS: bridge, Linux: host
-NETWORK_MODE=bridge
