--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "**/*.scss": "stylelint"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^9.1.2",
     "@garage11/vue-eslint-parser": "^8.0.0",
     "@garage11/vuepack": "1.2.0",
     "@rollup/plugin-commonjs": "^11.0.2",
@@ -41,6 +42,7 @@
     "chalk": "^3.0.0",
     "chokidar": "^3.3.1",
     "clean-css": "^4.2.3",
+    "commitlint": "^9.1.2",
     "connect": "^3.7.0",
     "del": "2.x.x",
     "eslint": "7.x.x",
