fix: use bridge by default

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,4 +1,4 @@
 # Linux may use docker-compose.host.yml
 # MacOS must use docker-compose.bridge.yml
-COMPOSE_FILE=docker-compose.yml:docker-compose.host.yml
+COMPOSE_FILE=docker-compose.yml:docker-compose.bridge.yml
 COMPOSE_PROJECT_NAME=mg
